--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -526,6 +526,19 @@
 		</td>
 	</tr>
 	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Open Corresponding Task Shows Corresponding Comment</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Open Corresponding Task in the History view now scrolls to the corresponding bug comment when a commit was made.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#FAF7FB">
 		<p align="right"><b>QA Contact</b></p>
 		</td>
@@ -653,6 +666,19 @@
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">A new feature org.eclipse.mylyn.commons has been added which includes all commons plug-ins. This feature is provided for update manager compatibility and not categorized on the update site or P2 repository. To avoid conflicts this feature must be the only including the commons plug-ins. All other features should only import all required commons plug-ins.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>XML-RPC Transport</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The <code>org.eclipse.mylyn.xmlrpc</code> provides a generic XML-RPC transport layer.</p>
 		</td>
 	</tr>
 	<tr>
