--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -276,6 +276,7 @@
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">On Mac OS X and Windows 7 synchronization progress shows in the Task Bar .</p>
+		<p><img border="0" src="images/3.4/windows-progress.png"></p>
 		</td>
 	</tr>
 	<tr>
@@ -284,6 +285,7 @@
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">Tasks can be created and activated directly from the Windows 7 Task Bar.</p>
+		<p><img border="0" src="images/3.4/windows-actions.png"></p>
 		</td>
 	</tr>
 	<tr>
@@ -368,10 +370,23 @@
 <table cellpadding="10" cellspacing="0" width="100%">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Task Templates</b></p>
+		<p align="right"><b>Template for Active Task</b></p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">A templates for Java that inserts the ID of the active task can now be configured in the preferences.</p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Improved Resource Monitoring</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The preferences for resource monitoring exclusion supports ANT-sytle filter definitions for more flexible resource exclusions. Resource monitoring can now also take the modification date of files into account to filter file updates caused by background synchronizations of shared drives for instance.</p>
 		</td>
 	</tr>
 	<tr>
