--- a/new/new-3.5.html
+++ b/new/new-3.5.html
@@ -1,4 +1,3 @@
-
 <html>
 <body bgcolor="FFFFFF">
 
@@ -46,15 +45,14 @@
 	<li><a href="#framework">Framework and API</a></li>
 </ul>
 
-<p><b>Note: </b>The Mylyn weekly update sites have moved:</p>
+<p><b>Note: </b>The Mylyn update sites has moved:</p>
 
 <ul>
-	<li>Repository for Mylyn 3.5:<br><br>
-	&nbsp;&nbsp;<b><font color="#666666">http://</font>download.eclipse.org/mylyn/releases/3.5</b>&nbsp;&nbsp;(Eclipse
+	<li><b><font color="#666666">http://</font>download.eclipse.org/mylyn/releases/3.5</b>&nbsp;&nbsp;(Eclipse
 	3.5, 3.6, 3.7)<br><br></li>
 </ul>
 
-<p>See the <a href="/mylyn/downloads/">download page</a> for other changes.</p> 
+<p>See the <a href="/mylyn/downloads/">download page</a> for additional locations.</p> 
 
 <p>Mylyn 3.5 requires <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=313436">Eclipse 3.5 or later</a>.</p>
 
@@ -67,15 +65,17 @@
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Active Task on Trim</b></p>
+		<p align="right"><b>Filter Tasks not Matching Queries</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">If "Show Subtasks not Matching Queries" is disabled under "Advanced
-Filters" the Task List only shows subtasks directly matched by
-queries. The neat thing is that all subtasks are still cached to make
-them accessible for searching and quick offline access but subtasks
-that you may not be interested in don't overload the Task List any
-longer.</p>
+		<p align="left">By default all subtasks are shown in the Task List.
+					This can lead to an overload of incomings when connecting to
+					repositories that structure tasks in deep hierarchies. De-selecting
+					"Show Subtasks not Matching Queries" under "Advanced Filters" in
+					the Task List will only show subtasks directly matched by queries.
+					All subtasks are still cached to make them accessible for searching
+					and quick offline access but subtasks that you may not be
+					interested in don't overload the Task List any longer.</p>
 		<p><img border="0" src="images/3.5/task-list-filters.png"></p>
 		</td>
 	</tr>	
@@ -89,7 +89,9 @@ longer.</p>
 		<p align="right"><b>Active Task on Trim</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">A widget that is displayed on the window trim shows the active task. Tasks can be activated from the history using the arrow button.</p>
+		<p align="left">A widget that is displayed on the window trim shows
+					the active task. Tasks can be activated from the history using the
+					arrow button.</p>
 		<p><img border="0" src="images/3.5/task-trim.png"></p>
 		</td>
 	</tr>	
@@ -125,7 +127,7 @@ longer.</p>
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Task-Focused Interface: Merging of Contexts</b></p>
+		<p align="right"><b>Merging of Contexts</b></p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">Sam Davis contributed an enhancement that displays a prompt to merge or replace an existing context when copying a context between tasks.</p>
@@ -152,43 +154,22 @@ longer.</p>
 
 
 <p>&nbsp;</p>
-<h2><a name="hudson">Hudson Connector (supports Jenkins)</a></h2>
+<h2><a name="hudson">Hudson/Jenkins Connector</a></h2>
 
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Hudson Connector (Incubation)</b></p>
+		<p align="right"><b>Hudson/Jenkins Connector (Incubation)</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The Hudson connector, developed by Markus Knittig as part of <a href="http://wiki.eclipse.org/Mylyn/Hudson_Integration_for_Mylyn" target="_new">his Google Summer of Code project</a>, shows the status of build jobs in a Builds view. The view shows the time of the last build and the weather icon indicates how frequently a build has failed in the recent past.</p>
+		<p align="left">
+					The Hudson connector (supports Jenkins), developed by Markus
+					Knittig as part of a <a href="http://wiki.eclipse.org/Mylyn/Hudson_Integration_for_Mylyn" target="_new">Google Summer of Code project</a>,
+					shows the status of selected Hudson and Jenkins jobs in a Builds view. For each job the
+					time of the last build is shown and the weather icon indicates how
+					frequently a build has failed in the recent past.
+				</p>
 		<p><img border="0" src="images/3.5/builds-view2.png"></p>
-		</td>
-	</tr>	
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b></b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">Build jobs can be selected for monitoring from the properties dialog.</p>
-		<p><img border="0" src="images/3.5/hudson-properties.png"></p>
-		</td>
-	</tr>	
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b></b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">Automatic refreshing of build status can be configured in the preferences.</p>
-		<p><img border="0" src="images/3.5/builds-preferences.png"></p>
-		</td>
-	</tr>	
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b></b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">The overall status of builds is displayed as a decoration when the Builds view is in fast view mode.</p>
-		<p><img border="0" src="images/3.5/builds-view-icon.png"></p>
 		</td>
 	</tr>	
 	<tr>
@@ -205,6 +186,29 @@ longer.</p>
 		<p align="right"><b></b></p>
 		</td>
 		<td valign="top" width="85%">
+		<p align="left">The overall status of builds is displayed as a decoration when the Builds view is in fast view mode.</p>
+		<p><img border="0" src="images/3.5/builds-view-icon.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Automatic Refresh</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Automatic refreshing of the view can be configured in the preferences.</p>
+		<p><img border="0" src="images/3.5/builds-preferences.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Build Notifications</b></p>
+		</td>
+		<td valign="top" width="85%">
 		<p align="left">Popup notifications are displayed when the status of a build plan changes.</p>
 		<p><img border="0" src="images/3.5/builds-popup-notification.png"></p>
 		</td>
@@ -216,66 +220,27 @@ longer.</p>
 	</tr>
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Hudson Connector (Incubation): Automatic Server Discovery and Test Results</b></p>
+		<p align="right"><b>Server Properties</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">Torkild Ulv&#248;y Resheim provided a great contribution that adds auto discovery for Hudson servers through ECF. When a server is dicovered a service message is displayed in the Builds view and the server can be configured with two clicks.</p>
+		<p align="left">Build jobs are selected for monitoring from the servers properties dialog.</p>
+		<p><img border="0" src="images/3.5/hudson-properties.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Automatic Server Discovery</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The connector monitors the local network and displays
+					a service message in the Builds view when a new server is
+					discovered. Selecting jobs for monitoring only takes a few clicks.</p>
 		<p><img border="0" src="images/3.5/hudson-autodiscovery.png"></p>
-		</td>
-	</tr>	
-	<tr>
-		<td colspan="2">
-		<hr>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b></b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">If a build requires parameters a dialog is displayed when it is run.</p>
-		<p><img border="0" src="images/3.5/hudson-parameters.png"></p>
-		</td>
-	</tr>	
-	<tr>
-		<td colspan="2">
-		<hr>
-		</td>
-	</tr>
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Build Editor</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">Builds can be opened in an editor that displays build details on a single page: Status, tests results, artifacts and code changes.</p>
-		<p><img border="0" src="images/3.5/builds-editor3.png"></p>
-		</td>
-	</tr>	
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Hudson Connector (Incubation): Test Integration and More Enhancements</b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">The test results of the last build can be viewed by selecting Show Test Results from the popup menu in the Builds view. Tests can be rerun locally from the JUnit view.</p>
-		<p><img border="0" src="images/3.5/builds-test-results.png"></p>
-		</td>
-	</tr>	
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b></b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">The build editor shows tests results in a tree that opens the corresponding Java file on double click. The list of tests can be filtered to show failures only.</p>
-		<p><img border="0" src="images/3.5/builds-editor-test-results.png"></p>
-		</td>
-	</tr>	
-	<tr>
-		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b></b></p>
-		</td>
-		<td valign="top" width="85%">
-		<p align="left">Tasks can easily be created from builds. The description is automatically pre-populated with a list of changed files and failed tests.</p>
-		<p><img border="0" src="images/3.5/build-new-task.png"></p>
 		</td>
 	</tr>	
 	<tr>
@@ -298,17 +263,21 @@ longer.</p>
 		</td>
 	</tr>
 	<tr>
-		<td colspan="2">
-		<hr>
-		</td>
-	</tr>
-	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Hudson Connector (Incubation): Enhancements</b></p>
+		<p align="right"><b>Build Editor</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">The output of the last build can be viewed by selecting Show Output from the popup menu in the Builds view. Java stack traces are hyperlinked.</p>
-		<p><img border="0" src="images/3.5/builds-console.png"></p>
+		<p align="left">Builds can be opened in an editor that displays build details on a single page: Status, tests results, artifacts and code changes.</p>
+		<p><img border="0" src="images/3.5/builds-editor3.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Test Integration</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The test results of the last build can be viewed by selecting Show Test Results from the popup menu in the Builds view. Tests can be rerun locally from the JUnit view.</p>
+		<p><img border="0" src="images/3.5/builds-test-results.png"></p>
 		</td>
 	</tr>	
 	<tr>
@@ -316,10 +285,52 @@ longer.</p>
 		<p align="right"><b></b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">URLs are hyperlinked in the console.</p>
-		<p><img border="0" src="images/3.5/builds-console-hyperlink.png"></p>
+		<p align="left">The build editor shows tests results in a tree that opens the corresponding Java file on double click. The list of tests can be filtered to show failures only.</p>
+		<p><img border="0" src="images/3.5/builds-editor-test-results.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
 		</td>
 	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Running Builds</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">If a build requires parameters a dialog is displayed when it is run.</p>
+		<p><img border="0" src="images/3.5/hudson-parameters.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Creating Tasks from Builds</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">Tasks can easily be created from builds. The description is automatically pre-populated with a list of changed files and failed tests.</p>
+		<p><img border="0" src="images/3.5/build-new-task.png"></p>
+		</td>
+	</tr>	
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Build Console</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The output of the last build can be viewed by selecting Show Output from the popup menu in the Builds view. Java stack trace elements and URLs are hyperlinked.</p>
+		<p><img border="0" src="images/3.5/builds-console.png"></p>
+		</td>
+	</tr>	
 </table>
 
 
@@ -373,10 +384,10 @@ longer.</p>
 <table cellpadding="10" cellspacing="0">
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Trac: Mid-air collision detection support</b></p>
+		<p align="right"><b>Mid-air collision detection support</b></p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">If a Trac ticket has changed since it was last synchronized an error is displayed to avoid unintentional overwriting of changes. Please note that this requires a <a href="http://trac-hacks.org/ticket/5402">patched version of Trac's XML-RPC Plugin</a>.</p>
+		<p align="left">If a Trac ticket has changed since it was last synchronized an error is displayed to avoid unintentional overwriting of changes. Please note that this requires the latest version of <a href="http://trac-hacks.org/wiki/XmlRpcPlugin" target="_new">Trac's XML-RPC Plugin</a>.</p>
 		<p><img border="0" src="images/3.5/trac-mid-air-collision.png"></p>
 		</td>
 	</tr>
@@ -387,7 +398,7 @@ longer.</p>
 	</tr>
 	<tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>Trac: Decoration for Stories</b></p>
+		<p align="right"><b>Decoration for Stories</b></p>
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">Trac tickets with type 'story' are decorated as stories.</p>
@@ -400,7 +411,7 @@ longer.</p>
 <p>&nbsp;</p>
 <h2><a name="framework">Framework and API</a></h2>
 
-<p>See <a href="http://wiki.eclipse.org/Mylyn/Porting_Guide#Notable_API_changes_in_3.5">porting guide</a> for additional notes on API changes.</p>
+<p>See <a href="http://wiki.eclipse.org/Mylyn/Porting_Guide#Notable_API_changes_in_3.5" target="_new">porting guide</a> for additional notes on API changes.</p>
 
 <table cellpadding="10" cellspacing="0">
 	<tr>
